--- a/5º Año/Ética y Deontología  Profesional/Unidad 2/5. Phishing.md
+++ b/5º Año/Ética y Deontología  Profesional/Unidad 2/5. Phishing.md
@@ -3,7 +3,7 @@ El phishing consiste en engañar al posible estafado, suplantando la imagen de u
 - **SMS (mensaje corto):** La recepción de un mensaje donde le solicitan sus datos personales.
 - **Llamada telefónica:** Pueden recibir una llamada telefónica en la que el emisor suplanta a una entidad privada o pública para que usted le facilite datos privados.
 - **Página web o ventana emergente:** Es muy clásica y bastante usada.
-- **Correo electrónico:** El más usado y más conocido por los internautas. El procedimiento es la recepción de un correo electrónico donde SIMULAN a la entidad o organismo que quieren suplantar para obtener datos del usuario novel.
+- **Correo electrónico:** El más usado y más conocido por los internautas. El procedimiento es la recepción de un correo electrónico donde simulan a la entidad o organismo que quieren suplantar para obtener datos del usuario novel.
 
 La forma más segura para estar tranquilo y no ser estafado, es que nunca se responda a ninguna solicitud de información personal a través de correo electrónico, llamada telefónica o mensaje corto (SMS). Las entidades u organismos nunca le solicitan contraseñas, números de tarjeta de crédito o cualquier información personal por correo electrónico, por teléfono o SMS.
 Para visitar sitios web, teclee la dirección URL en la barra de direcciones, nunca por enlaces procedentes de cualquier sitio. Por su parte las entidades bancarias contienen certificados de seguridad y cifrados seguros, no tenga miedo al uso de la banca por internet.
